--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^17.0.2",
+    "react-file-viewer": "^1.2.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
